<resources>
    <string name="app_name">ICT 4 NCD</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_heart_window">HeartWindow</string>
    <string name="title_activity_graph">graphActivity</string>
    <string name="language_prompt">Choose a language</string>
    <string-array name="language_array">
        <item>Choose a Language</item>
        <item>Bislama</item>
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="heart_array">
        <item>Systolic Blood Pressure</item>
        <item>Diastolic Blood Pressure</item>
        <item>Heart Rate</item>
    </string-array>
    <string name="title_activity_more_info">MoreInfo</string>
    <string name="title_activity_blood_sugar">BloodSugarActivity</string>
    <string name="blood_sugar">Blood Sugar:</string>
    <string name="fasting">Fasting</string>
    <string name="after_meal">After Meal</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="systolic">Systolic Blood Pressure:</string>
    <string name="diastolic">Diastolic Blood Pressure:</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="kg"> kg</string>
    <string name="information">Information</string>
    <string name="cm"> cm</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="add">Add</string>
    <string name="heart_rate_title">Heart Rate (Pulse)</string>
    <string name="systolic_title">Systolic Blood Pressure</string>
    <string name="diastolic_title">Diastolic Blood Pressure</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_all_data">AllDataActivity</string>
</resources>
