<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_weight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gwhitmore.ict4ncd.WeightActivity"
    tools:showIn="@layout/activity_weight">

    <TextView
        android:text="@string/date"
        android:onClick="changeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateText"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignBottom="@+id/addButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/SplitLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/addButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/SplitLine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/weightListView"
        android:background="@drawable/border_no_space"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/weightText"
        android:layout_toEndOf="@+id/weightText"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:contentDescription="@string/information" />

    <TextView
        android:text="@string/kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weightText"
        android:layout_toRightOf="@+id/weightText"
        android:layout_toEndOf="@+id/weightText"
        android:id="@+id/textView8"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:contentDescription="@string/information"/>

    <TextView
        android:text="@string/cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmTextView"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignBaseline="@+id/heightText"
        android:layout_alignBottom="@+id/heightText"
        android:layout_toRightOf="@+id/weightText"
        android:layout_toEndOf="@+id/weightText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightText"
        android:background="@drawable/border_with_space"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:layout_above="@+id/textView8"
        android:hint="@string/height"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weightText"
        android:hint="@string/weight"
        android:background="@drawable/border_with_space"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/imageView2" />

    <Button
        android:text="@string/add"
        android:onClick="addToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp" />

</RelativeLayout>
